[package]
name = "pswdme"
version = "0.2.0"
edition = "2021"
description = """
Super trivial program that generates random password.
If `PSWD_LENGTH` option is not provided the programs uses default
length value, which is 12.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"]  }
rand = "0.8.4"
